# gitscribe

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.rst  requirements.txt  setup.cfg  setup.py
gbot/: __main__.py  consts.py  discord.py  utils.py
gitscribe/: __init__.py  _discord.py  consts.py  discord.py  utils.py
gitscribe/apis/: github.py
scripts/: gbot  gitscribe.py
