[metadata]
name = gitscribe
version = attr: gitscribe.consts.VERSION
author = SNG Viraj Reddy
author_email = vir200319@gmail.com
url = https://github.com/oss-reva/gitscribe
description = A Discord bot that provides information about GitHub repositories and issues.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    aiohttp==3.8.5
    aiosignal==1.3.1
    async-timeout==4.0.3
    attrs==23.1.0
    certifi==2023.7.22
    charset-normalizer==3.2.0
    discord.py==2.3.2
    frozenlist==1.4.0
    idna==3.4
    multidict==6.0.4
    python-dotenv==1.0.0
    requests==2.31.0
    urllib3==2.0.5
    yarl==1.9.2


[options.entry_points]
console_scripts = 
    gitscribe = scripts.gitscribe:main
